force-app/main/default/objects/aecm__Solution_Review__c/aecm__Solution_Review__c.object-meta.xml
<CustomObject>
    <description>Visibility to details related to reviews of recommended solutions with stakeholders. Creates an area for business and IT to collaborate recommended solution designs.</description>
    <label>Solution Review</label>
    <nameField>
        <label>Review Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>