force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Audience__c.field-meta.xml
<CustomField>
    <fullName>aecm__Audience__c</fullName>
    <inlineHelpText>Select the type of audience that is expected at this review.</inlineHelpText>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Stakeholders</fullName>
            </value>
            <value>
                <fullName>Solution SMEs</fullName>
            </value>
            <value>
                <fullName>Peers</fullName>
            </value>
            <value>
                <fullName>Executives</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>