force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Objectives__c.field-meta.xml
<CustomField>
    <fullName>aecm__Objectives__c</fullName>
    <inlineHelpText>List out the key objectives for this review.</inlineHelpText>
    <label>Objectives</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>