force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Outcomes__c.field-meta.xml
<CustomField>
    <fullName>aecm__Outcomes__c</fullName>
    <inlineHelpText>Provide the primary outcomes of this review.</inlineHelpText>
    <label>Outcomes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>