force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Presenter__c.field-meta.xml
<CustomField>
    <fullName>aecm__Presenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presenter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solution_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>