force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Review_Held_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Review_Held_Date__c</fullName>
    <inlineHelpText>Date and time when review was performed.</inlineHelpText>
    <label>Review Held Date</label>
    <type>DateTime</type>
</CustomField>