force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Review_Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Concept Business Review</fullName>
            </value>
            <value>
                <fullName>Initial Concept Technical Review</fullName>
            </value>
            <value>
                <fullName>Early Solution Business Review</fullName>
            </value>
            <value>
                <fullName>Early Solution Technical Review</fullName>
            </value>
            <value>
                <fullName>Cross Functional Stakeholder Review</fullName>
            </value>
            <value>
                <fullName>Followup Review</fullName>
            </value>
            <value>
                <fullName>Final Solution Business Review</fullName>
            </value>
            <value>
                <fullName>Final Solution Technical Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>