force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Solution_Design__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Design__c</fullName>
    <inlineHelpText>Solution Design which this review is related to.</inlineHelpText>
    <label>Solution Design</label>
    <referenceTo>aecm__Solution_Design__c</referenceTo>
    <relationshipLabel>Solution Reviews</relationshipLabel>
    <relationshipName>Solution_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>