force-app/main/default/objects/aecm__Solution_Review__c/fields/aecm__Target_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>aecm__Target_Date_and_Time__c</fullName>
    <inlineHelpText>Select the intended date and time for this review.</inlineHelpText>
    <label>Target Date and Time</label>
    <type>DateTime</type>
</CustomField>